Add Required field Exceptions